samples/_failures_safe/1761245472_dee1af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff581075.c: In function ‘free_graph’:
./samples/SAFE/__tmp_ff581075.c:168:12: error: expected ‘,’ or ‘;’ at end of input
  168 |     struct GraphEdge *edge = graph->edges
      |            ^~~~~~~~~
./samples/SAFE/__tmp_ff581075.c:168:12: error: expected declaration or statement at end of input
